Fix Netlify deployment paths and renamed HTML

--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game</title>
+    <title>Game Break</title>
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h1>Rock Paper Scissors Game</h1>
+    <h1>Game Break</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="/images/rock.jpg">
+            <img src="rock.png">
         </div>
         <div class="choice" id="paper">
-            <img src="/images/paper.jpg">
+            <img src="paper.png">
         </div>
         <div class="choice" id="scissors">
-            <img src="/images/scissors.jpg">
+            <img src="scissors.png">
         </div>
     </div>
     
+    <div class="sub-heading">
+    <p>Choose Rock, Paper, or Scissors</p>
+</div>
 
     <div class="score-board">
 
