Clean HTML for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -3,43 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Break</title>
+    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h1>Game Break</h1>
+    <h1>Rock Paper Scissors Game</h1>
+
+    <!-- Choices Section -->
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="rock.png">
+            <img src="rock.png" alt="Rock">
         </div>
         <div class="choice" id="paper">
-            <img src="paper.png">
+            <img src="paper.png" alt="Paper">
         </div>
         <div class="choice" id="scissors">
-            <img src="scissors.png">
+            <img src="scissors.png" alt="Scissors">
         </div>
     </div>
     
+    <!-- Sub-heading -->
     <div class="sub-heading">
-    <p>Choose Rock, Paper, or Scissors</p>
-</div>
+        Choose Rock, Paper, or Scissors
+    </div>
 
+    <!-- Scoreboard -->
     <div class="score-board">
-
         <div class="score">
             <p id="user-score">0</p>
             <p>You</p>
         </div>
-
         <div class="score">
-        <p id="comp-score">0</p>
-        <p>Computer</p>
-    </div>
+            <p id="comp-score">0</p>
+            <p>Computer</p>
+        </div>
     </div>
 
+    <!-- Message -->
     <div class="msg-container">
-        <p id="msg"> Play your move</p>
+        <p id="msg">Play your move</p>
     </div>
+
     <script src="games.js"></script>
 </body>
 </html>
