Upload Rock Paper Scissors Game

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game</title>
+    <title>Game Break</title>
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h1>Rock Paper Scissors Game</h1>
 
-    <!-- Choices Section -->
+    <h1>Game Break</h1>
+
+    <!-- Choices -->
     <div class="choices">
         <div class="choice" id="rock">
             <img src="rock.png" alt="Rock">
@@ -21,10 +22,10 @@
             <img src="scissors.png" alt="Scissors">
         </div>
     </div>
-    
-    <!-- Sub-heading -->
+
+    <!-- Subheading -->
     <div class="sub-heading">
-        Choose Rock, Paper, or Scissors
+        <p>Choose Rock, Paper, or Scissors</p>
     </div>
 
     <!-- Scoreboard -->
@@ -33,6 +34,7 @@
             <p id="user-score">0</p>
             <p>You</p>
         </div>
+
         <div class="score">
             <p id="comp-score">0</p>
             <p>Computer</p>
